all/15455
From bugs+caf_=bugs=bugs.plt-scheme.org@plt-scheme.org Wed Jun 21 03:38:44 2017
Received: from mail-io0-f178.google.com (mail-io0-f178.google.com [209.85.223.178])
	by winooski.ccs.neu.edu (8.14.7/8.14.7) with ESMTP id v5L7cgfn007398
	for <bugs@bugs.plt-scheme.org>; Wed, 21 Jun 2017 03:38:42 -0400
Message-Id: <201706210738.v5L7cdk1004669@winooski.ccs.neu.edu>
Date: Wed, 21 Jun 2017 03:38:39 -0400
From: cristian.esquivias@gmail.com
To: bugs@racket-lang.org
Subject: Build failure on Cygwin

>Number:         15455
>Category:       all
>Synopsis:       Build failure on Cygwin
>Class:          sw-bug
>Responsible:    nobody
>Severity:       serious
>Priority:       medium
>State:          open
>Confidential:   no
>Arrival-Date:   Wed Jun 21 03:40:01 -0400 2017
>Originator:     Cristian Esquivias
>Organization:
plt
>Submitter-Id:   unknown
>Release:        6.7
>Environment:
windows "Windows NT 6.2 (Build 9200)" (win32\x86_64\3m) (get-display-depth) = 32
Human Language: english
(current-memory-use) 373018784
raco pkg (show):
Installation-wide:
 Package            Checksum             Source
 main-distribution  ba3c3c7492822f85...  catalog...tribution
 racket-lib         eab208a9ea408bd3...  catalog racket-lib
 [191 auto-installed packages not shown]
User-specific for installation "6.7":
 [none]



Collections:
("C:\\Users\\Cristian\\AppData\\Roaming\\Racket\\6.7\\collects"
 (non-existent-path))
("C:\\Program Files\\Racket\\collects"
 ("acks" "compiler" "data" "db" "dynext" "ffi" "file" "info" "info-domain" "json" "launcher" "net" "openssl" "pkg" "planet" "racket" "raco" "reader" "realm" "s-exp" "setup" "syntax" "version" "xml"))

Recent Internal Errors: 
Computer Language: (("Determine language from source") (#(#t print mixed-fraction-e #f #t debug) (default) #() "#lang racket\n" #t #t ((test) (main)) #t))
>Description:
Following the Cygwin build instructions on github.com/racket/racket leads to an error:

    make --unix
    make: unrecognized option '--unix'

I tried to build without the `unix` flag. I get further, but the build fails with:

    ../../../racket/src/file.c: In function ‘do_directory_list’:
    ../../../racket/src/file.c:5491:13: error: ‘struct dirent’ has no member named  d_namlen’
         nlen = e->d_namlen;
                 ^

What's the proper way to configure a unix build for cygwin?

(I submitted this bug on a precompiled Windows version of Racket on the same machine so all the environment info will be included.)
>How-To-Repeat:
wget https://mirror.racket-lang.org/installers/6.9/racket-6.9-src-builtpkgs.tgz
tar xf racket-6.9-src-builtpkgs.tgz
cd racket-6.9/src
mkdir build
cd build
../configure
make [--unix]
>Fix:
